# playground

./: .gitignore  Cargo.toml  Dioxus.toml  config.json  index.html  memo.md  output.json  sample_base.json  test.json
archive/: basic.rs  beta.rs  chart.rs  chunk.rs  db.rs  dioxus_test.rs  egui.rs  google.rs  html.rs  html_dl.rs  html_dl_2.rs  html_dl_cmd.rs  html_dl_sys.rs  https.rs  json_read.rs  main.rs  main_sys.rs  make_query_list.rs  mutex.rs  ratatui_graph.rs  reqwest.rs  scrape.rs  seo.rs  sub_sys.rs  tokio.rs  web.rs  word.rs
assets/: main.css
db/: word.json
db/Google/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
db/HTML/: rust.html
db/JSON/: rust.json  test.json
db/TEST/: test.html
db/data/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
doc/: memo.md  todo.md
sample/: Rust-0.html  index.html
sample/index/: app_2711270789463070046.css
sample/test/: index.html
src/: macros.rs  main.rs  mainr.rs
test/: test.html
