[package]
name = "playground"
version = "0.0.0"
authors = ["u7f8au7fbd <u7f8au7fbd@outlook.com>"]
edition = "2021"

[dependencies]
#シリアライズ/デシリアライズ
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
#HTTPクライアント
select = { version = "*" }
reqwest = { version = "*", features = ["cookies", "blocking", "http2", "json"] }
scraper = { version = "*" }
url = { version = "*" }
#非同期処理
tokio = { version = "*", features = ["full"] }
#現在時刻の取得
chrono = { version = "*" }
#GUI
dioxus = { version = "*", features = ["desktop"] }
charming = { version = "*", features = ["ssr"] }
#その他
rand="*"
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
